Friday, August 2, Michael Koch

	* Patch to declare operators in header file and made method
	  headers equal to their declaration in header file.

Monday, July 29, Ron Steinke

	* Patch to allow multiple Connection instances. Lobby and
	  TypeInfoEngine are per Connection, World is per Player,
	  Entity instances are associated with a particular World.
	  It may be possible at this point to have more than one
	  Player for a given Connection, someone should check this.

Wednesday, July 3, James Turner

	* Compile fixes for OS-X / GCC 3.1
	* Renamed Time.h/cpp to Timestamp, since case insensitive file system
	  means we look like 'time.h', which is really bad.
	* Fix include of <multimap.h> to only occur under GCC 2.9.x; I think this
	  is correct, let me know if not.

Tuesday, July 2, Ron Steinke

	* Fixes so the blocking poll handles timeouts
	  created during callbacks properly

Sunday, June 30, Ron Steinke

	* PollDefault fixes
	* Timeout::poll() and Timeout::pollAll() now return info
	  on when to poll again

Wednesday, June 26, Al Riddoch

	* Switched to new location for skstream headers.

Monday, June 21, Ron Steinke

	* Added an optional timeout argument to PollDefault::poll()

Tuesday, June 18, James Turner

	* Make dtor of Meta virtual, just to be safe

Monday, April 29, Ron Steinke

	* Added check for fd == INVALID_SOCKET in PollDefault

Sunday, June 2, James Turner

	* Safety tweaks in Connection::recv() and Metaserver::recv()
	  to handle bad sockets without segfaulting. Should
	  improve reliability of the Dime meta-server code.

Wednesday, May 22, James Turner

	* Modified Meta::got_data to be safe even when _stream is
	  NULL. This is legal when the meta-server has finished
	  sending us the server list, but there are still
	  active queries (which is quite commmon, when you think
	  about it)

Tuesday, May 21, James Turner

	* Protected against MOVE ops with no ID argument set: fail
	  rather than asserting.